package battleship.domain.model

/**
 * ---------------------------------------------------------------------------------------------
 * Состояние клетки игрового поля.
 *
 * Используется в [Board.grid] для хранения текущего состояния каждой клетки.
 *
 * Возможные значения:
 * - `EMPTY` - пустая клетка (не атакована, корабля нет).
 * - `SHIP` - клетка с сегментом корабля (не атакована).
 * - `HIT` - попадание по кораблю.
 * - `MISS` - промах (выстрел по пустой клетке).
 * ---------------------------------------------------------------------------------------------
 */
enum class CellState { EMPTY, SHIP, HIT, MISS }

/**
 * ---------------------------------------------------------------------------------------------
 * Результат выстрела.
 *
 * Возвращается методом [Board.receiveShot] после обработки выстрела.
 *
 * Возможные значения:
 * - `MISS` - промах (клетка была `EMPTY`).
 * - `HIT` - попадание, но корабль ещё не потоплен.
 * - `SUNK` - попадание, корабль полностью потоплен (но есть ещё живые).
 * - `WIN` - попадание, потоплен последний корабль — победа.
 * ---------------------------------------------------------------------------------------------
 */
enum class ShotResult { MISS, HIT, SUNK, WIN }

/**
 * ---------------------------------------------------------------------------------------------
 * Статус игровой сессии.
 *
 * Определяет текущую фазу жизненного цикла партии в [Game] и [GameSession].
 *
 * Переходы:
 * SETUP_P1 -> SETUP_P2 -> IN_PROGRESS -> FINISHED
 * SETUP_P1 -> IN_PROGRESS  (если второй игрок — бот)
 *
 * ## Значения
 * - `SETUP_P1` - ожидание расстановки кораблей первого игрока.
 * - `SETUP_P2` - ожидание расстановки кораблей второго игрока.
 * - `IN_PROGRESS` - игра идёт, игроки обмениваются выстрелами.
 * - `FINISHED` - игра завершена, определён победитель.
 * ---------------------------------------------------------------------------------------------
 */
enum class GameStatus {
    SETUP_P1,     /* Ожидание расстановки кораблей игрока 1 */
    SETUP_P2,     /* Ожидание расстановки кораблей игрока 2 */
    IN_PROGRESS,  /* Игра идёт                              */
    FINISHED      /* Игра завершена                         */
}