package battleship.domain.model

/**
 * =============================================================================================
 * Игровой агрегат - полное состояние одной партии.
 *
 * Содержит всю информацию о текущей игре: игроков, доски, очерёдность хода,
 * историю ходов и результат. Мутабельные поля обновляются через [GameSessionImpl]
 * в соответствии с правилами игры.
 *
 * Жизненный цикл:
 * 1. Создаётся в [GameSession.startGame] со статусом `SETUP_P1`.
 * 2. После расстановки кораблей статус меняется на `SETUP_P2` или `IN_PROGRESS`.
 * 3. В процессе игры заполняется [moves] и переключается [currentTurn].
 * 4. При победе устанавливается [winner], [status] = `FINISHED` и рассчитываются [eloChanges].
 *
 * Структура:
 * - [player1], [player2] - участники партии.
 * - [board1], [board2] - доски игроков (свои корабли).
 * - [currentTurn] - игрок, который сейчас должен ходить.
 * - [status] - текущая фаза игры.
 * - [moves] - полная история всех ходов.
 * - [winner] - победитель (заполняется при завершении).
 * - [eloChanges] - изменения рейтинга (заполняется при завершении).
 *
 * @param id уникальный идентификатор партии (UUID)
 * @param player1 первый игрок
 * @param player2 второй игрок
 * =============================================================================================
 */
class Game(
    val id: String,
    val player1: Player,
    val player2: Player
) {

    /* Доска первого и второго игрока. */
    val board1: Board = Board(player1)
    val board2: Board = Board(player2)

    /* Игрок, который сейчас должен ходить. */
    var currentTurn: Player = player1
    /* Текущая фаза игры. */
    var status: GameStatus = GameStatus.SETUP_P1
    /* Полная история ходов в порядке совершения. */
    val moves: MutableList<Move> = mutableListOf()
    /* Победитель партии (null до завершения игры). */
    var winner: Player? = null
    /* Изменения рейтинга Эло для обоих игроков (null до завершения игры). */
    var eloChanges: Map<Player, EloChange>? = null

    /**
     * ---------------------------------------------------------------------------------------------
     * Возвращает доску указанного игрока (ту, где размещены его корабли).
     *
     * @param player игрок
     * @return доска с кораблями этого игрока
     * @throws IllegalStateException если игрок не участвует в партии
     * ---------------------------------------------------------------------------------------------
     */
    fun boardOf(player: Player): Board = when (player) {
        player1 -> board1
        player2 -> board2
        else -> error("Игрок $player не участвует в этой партии")
    }

    /**
     * ---------------------------------------------------------------------------------------------
     * Возвращает доску оппонента указанного игрока (ту, по которой он стреляет).
     *
     * @param player игрок
     * @return доска с кораблями оппонента
     * @throws IllegalStateException если игрок не участвует в партии
     * ---------------------------------------------------------------------------------------------
     */
    fun opponentBoardOf(player: Player): Board = when (player) {
        player1 -> board2
        player2 -> board1
        else -> error("Игрок $player не участвует в этой партии")
    }

    /**
     * ---------------------------------------------------------------------------------------------
     * Краткое строковое представление партии для отладки и списков.
     *
     * @return строка вида "Партия #a1b2c3d4 [Alice vs Bob] IN_PROGRESS"
     * ---------------------------------------------------------------------------------------------
     */
    override fun toString(): String =
        "Партия #${id.take(8)} [${player1.name} vs ${player2.name}] $status"
}
