package battleship.domain.model

/**
 * =============================================================================================
 * Набор Value Objects (объектов-значений) Domain-слоя.
 *
 * Содержит неизменяемые (data) классы, представляющие отдельные факты
 * о ходе игры, рейтингах, результате валидации и статистике.
 * Эти объекты переносят данные между слоями и не содержат бизнес-логики.
 * =============================================================================================
 */

/**
 * ---------------------------------------------------------------------------------------------
 * Один ход в партии.
 *
 * Фиксирует факт выстрела: кто, куда, каким по счёту ходом и с каким результатом.
 * Добавляется в [Game.moves] методом [GameSessionImpl.executeShot].
 *
 * @param turnNumber порядковый номер хода в партии (начиная с 1)
 * @param player игрок, совершивший выстрел
 * @param coordinate координата выстрела
 * @param result исход выстрела ([ShotResult])
 * ---------------------------------------------------------------------------------------------
 */
data class Move(
    val turnNumber: Int,
    val player: Player,
    val coordinate: Coordinate,
    val result: ShotResult
)

/**
 * ---------------------------------------------------------------------------------------------
 * Текущий рейтинг игрока.
 *
 * Начальный рейтинг - [INITIAL_RATING] (1000). Хранится в [EloRatingRepository],
 * обновляется после каждой завершённой партии.
 *
 * @param player игрок
 * @param rating значение рейтинга (по умолчанию 1000)
 * ---------------------------------------------------------------------------------------------
 */
data class EloRating(
    val player: Player,
    val rating: Int = INITIAL_RATING
) {
    companion object {
        const val INITIAL_RATING = 1000
    }
}

/**
 * ---------------------------------------------------------------------------------------------
 * Изменение рейтинга по итогам одной партии.
 *
 * Содержит старое и новое значение рейтинга и дельту (положительную для
 * победителя, отрицательную для проигравшего). Возвращается [EloRatingService].
 *
 * @param player игрок
 * @param oldRating рейтинг до партии
 * @param newRating рейтинг после партии
 * @param delta изменение рейтинга (положительное для победителя, отрицательное для проигравшего)
 * ---------------------------------------------------------------------------------------------
 */
data class EloChange(
    val player: Player, /* игрок, чей рейтинг изменился                                             */
    val oldRating: Int, /* рейтинг до партии                                                        */
    val newRating: Int, /* рейтинг после партии                                                     */
    val delta: Int      /* изменение (положительное для победителя, отрицательное для проигравшего) */
)

/**
 * ---------------------------------------------------------------------------------------------
 * Результат валидации.
 *
 * Используется для возврата итогов проверки расстановки кораблей
 * ([ShipPlacementValidator]) и правомерности хода ([TurnValidator]).
 *
 * @param isValid флаг успешности проверки
 * @param errors список сообщений об ошибках (пуст при успехе)
 * ---------------------------------------------------------------------------------------------
 */
data class ValidationResult(
    val isValid: Boolean,
    val errors: List<String> = emptyList()
) {
    companion object {
        fun success(): ValidationResult = ValidationResult(isValid = true)
        fun failure(vararg errors: String): ValidationResult =
            ValidationResult(isValid = false, errors = errors.toList())
        fun failure(errors: List<String>): ValidationResult =
            ValidationResult(isValid = false, errors = errors)
    }
}

/**
 * ---------------------------------------------------------------------------------------------
 * Статистика игрока.
 *
 * Агрегирует показатели по всем завершённым партиям. Возвращается [StatisticsService].
 *
 * @param gamesPlayed количество завершённых партий
 * @param wins количество побед
 * @param winRate доля побед (от 0.0 до 1.0)
 * @param currentElo текущий рейтинг Эло
 * ---------------------------------------------------------------------------------------------
 */
data class PlayerStats(
    val gamesPlayed: Int, /* сколько завершённых партий сыграно */
    val wins: Int,        /* сколько из них выиграно            */
    val winRate: Double,  /* доля побед (от 0.0 до 1.0)         */
    val currentElo: Int   /* текущий рейтинг Эло                */
) {
    /**
     * ---------------------------------------------------------------------------------------------
     * Форматированная строка для вывода статистики в консоль.
     *
     * @return строка вида "Игр: 5 | Побед: 3 | Винрейт: 60.0% | Рейтинг: 1030"
     * ---------------------------------------------------------------------------------------------
     */
    fun display(): String =
        "Игр: $gamesPlayed | Побед: $wins | Винрейт: ${"%.1f".format(winRate * 100)}% | Рейтинг: $currentElo"
}
